--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-scikit-learn
+scikit-learn==1.3
 pandas
 matplotlib
 seaborn
@@ -6,3 +6,4 @@ tensorflow
 streamlit
 sklearn.ensemble._gb_losses
 mlxtend
+cvxopt
